--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -15,10 +15,12 @@
         <i class="fas fa-music"></i>
         <%= link_to "Playlists", playlists_path, class: "nav-text" %>
         </div>
+        <% if current_user.role? == "Artist" %>
         <div class="flex">
         <i class="fas fa-compact-disc"></i>
         <%= link_to "Albums", albums_path, class: "nav-text" %>
         </div>
+        <%end%>
         <div class="flex">
         <i class="fas fa-heart"></i>
         <%= link_to "Liked", userlikes_path(current_user), class: "nav-text" %>
