--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,5 +38,26 @@
   color:white;
   font-size: 28px;
   padding-top: 15px;
+  // padding-right: 100px;
 }
 
+.nav-left {
+    // padding-right: 560px;
+    text-align: left;
+}
+
+.ul-nav {
+  width: 85vw;
+  justify-content: space-between;
+}
+
+.search-label {
+  padding-right: 10px;
+}
+
+input[type=text] {
+  border-radius: 10px;
+  height: 40px;
+  background-color: rgba(255,255,255,0.5);
+  color: white;
+}
