--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,9 +9,21 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ul-nav">
       <% if user_signed_in? %>
-        
+        <li class="nav-left">
+        <div class="search-track flex">
+                <h2 class="search-label">I feel like</h2>
+                    <%= form_tag station_index_path, method: :get do %>
+                    <%= text_field_tag :query,
+                        params[:query],
+                        class: "search-form",
+                        placeholder: "Search by mood, activity or emotion"
+                    %>
+                    <%= submit_tag "Search", class: "search-button" %>
+                    <% end %>
+                </div> 
+        </li>
         <li class="nav-item dropdown"><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "logout-button" %></li>
       <% else %>
       <li class="nav-item">
