--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,4 +60,6 @@ input[type=text] {
   height: 40px;
   background-color: rgba(255,255,255,0.5);
   color: white;
+  box-shadow: none;
+  border: none;
 }
