--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,8 +9,9 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ul-nav">
+  
       <% if user_signed_in? %>
+      <ul class="navbar-nav ul-nav">
         <li class="nav-left">
         <div class="search-track flex">
                 <h2 class="search-label">I feel like</h2>
@@ -24,8 +25,12 @@
                     <% end %>
                 </div> 
         </li>
-        <li class="nav-item dropdown"><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "logout-button" %></li>
+        <li class="nav-item dropdown">
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "logout-button" %>
+        </li>
+    </ul>
       <% else %>
+    <ul class="navbar-nav">
       <li class="nav-item">
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
