--- a/app/assets/stylesheets/components/_trackcard.scss
+++ b/app/assets/stylesheets/components/_trackcard.scss
@@ -5,6 +5,7 @@
     // background-color: rgba(0,0,0,0.1);
     backdrop-filter: blur(5px);
     // padding: 10px;
+    margin-left:20px;
     border-radius: 10px;
     text-align: center;
     overflow:hidden;
