--- a/app/assets/stylesheets/components/_albumsarea.scss
+++ b/app/assets/stylesheets/components/_albumsarea.scss
@@ -9,4 +9,13 @@
     // padding-bottom: 200px;
 }
 
+.album-index-heading {
+    margin-left: 280px;
+    padding-top: 140px;
+}
+
+.album-show-heading {
+    // margin-left: 280px;
+    padding-top: 140px;
+}
 
