--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,4 +1,4 @@
-<div class="station-background">
+<div class="station-background-default">
     <div class="station-flex">
         <div>
             <%= render 'shared/verticalnavbar' %>
@@ -11,7 +11,7 @@
                     <%end%>
                 </div>
                 <div class="album-show-details"> 
-                    <div class="">
+                    <div class="album-show-heading">
                         <h2 class="card-header"><%= @album.album_title %></h2>
                         <p class="card-subheader"><%= @album.album_description %></p>
                     </div>
