--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="home-background">
+<div class="station-background-default">
   <div class="overlay">
     <div class="form-container">
       <div class="container-devise">
