--- a/app/assets/stylesheets/components/_playlistarea.scss
+++ b/app/assets/stylesheets/components/_playlistarea.scss
@@ -1,6 +1,6 @@
 .playlist-area {
     margin-left: 280px;
-    // padding-bottom: 200px;
+    padding-top: 200px;
 }
 
 .playlist-grid {
@@ -27,5 +27,6 @@
 .playlist-show-details {
     position: absolute;
     margin-left: 280px;
+    padding-top: 200px;
 }
 
