--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="station-background">
+<div class="station-background-default">
     <div class="station-flex">
         <div>
             <%= render 'shared/verticalnavbar' %>
